chg: [event:view] Correctly display title to large by truncating (+ellipsis)

--- a/app/webroot/css/main.css
+++ b/app/webroot/css/main.css
@@ -37,6 +37,13 @@ pre {
     font-size: 11px;
 
 }
+
+.ellipsis-overflow {
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+}
+
 .nav-list {
     padding-right: 5px;
 }
